Fixed layout problem in IE6 and IE7. domTable was triggering the horizontal scrollbar.
git-svn-id: http://fbug.googlecode.com/svn/lite@5147 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/branches/firebug1.3/skin/xp/firebug.css
+++ b/branches/firebug1.3/skin/xp/firebug.css
@@ -673,6 +673,10 @@
     background: #fff;
 }
 
+.domTableIE {
+    width: auto;
+}
+
 .memberLabelCell {
     padding: 2px 0 2px 0;
     vertical-align: top;
